fixing button lost text on mobile view

--- a/src/Components/css/Contact.css
+++ b/src/Components/css/Contact.css
@@ -69,6 +69,9 @@ form > button:hover{
     .email{
         width: 300px;
     }
+    form > button {
+        width: 150px; /* Add this line */
+    }
 }
 @media only screen and (max-width: 700px){
     .name{
@@ -80,6 +83,9 @@ form > button:hover{
     .email{
         width: 300px;
     }
+    form > button {
+        width: 150px; /* Add this line */
+    }
 }
 @media only screen and (max-width: 500px){
     .name{
@@ -90,5 +96,8 @@ form > button:hover{
     }
     .email{
         width: 300px;
+    }
+    form > button {
+        width: 150px; /* Add this line */
     }
 }
